# tictac

./: .gitmodules  CMakeLists.txt
src/: main.c
src/TicTacToe/: TT_game.c  TT_game.h
